<resources>
    <string name="app_name">WIFI-Direct</string>
    <string name="login_page_account_hint">账号</string>
    <string name="login_page_pwd_hint">密码</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="home_page">主页</string>
    <string name="history">历史</string>
    <string name="search">搜索</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_setting">个人设置</string>
    <string name="installed_app">已安装应用</string>
    <string name="local_manager">本地管理</string>
</resources>
