<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.thc.www.p2p.widget.DeleteEditText
        android:id="@+id/det_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_login_edit_text"
        android:hint="@string/login_page_account_hint"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.thc.www.p2p.widget.DeleteEditText
        android:id="@+id/det_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_login_edit_text"
        android:hint="@string/login_page_pwd_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/det_login_account"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login_btn"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/det_login_pwd"/>

    <View
        android:id="@+id/v_center_divider"
        android:layout_width="1px"
        android:layout_height="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/register_account"
        android:textColor="@color/colorTheme"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/v_center_divider"
        app:layout_constraintEnd_toStartOf="@id/v_center_divider"
        app:layout_constraintTop_toTopOf="@id/v_center_divider"/>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/forget_pwd"
        android:textColor="@color/colorTheme"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/v_center_divider"
        app:layout_constraintStart_toEndOf="@id/v_center_divider"
        app:layout_constraintTop_toTopOf="@id/v_center_divider"/>
</android.support.constraint.ConstraintLayout>

